# CS-2340-Team-6-Project

./: .editorconfig  .env.example  .gitignore  .prettierignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PRIVACY_SETTINGS_FEATURE.md  PRIVACY_SETTINGS_QUICK_START.md  PRIVACY_UPDATES.md  README.md  create_superuser.py  docker-compose.yml  pyproject.toml  user_story_7_sequence_diagram.puml
account/: admin.py  admin_utils.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
account/management/commands/: geocode_accounts.py  geocode_users.py
account/migrations/: 0001_initial.py  0002_alter_account_phone_number_and_more.py  0003_alter_account_id.py
applicant/: admin.py  decorators.py  models.py  tests.py  urls.py  utils.py  views.py
applicant/migrations/: 0001_initial.py  0002_alter_applicant_resume.py  0003_remove_applicant_college_remove_applicant_degree_and_more.py  0004_alter_applicant_headline_alter_education_degree_and_more.py
applicant/templates/applicant/: messages.html  (+3 more)
applicant/templatetags/: applicant_utils.py
home/: views.py
job/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
job/migrations/: 0001_initial.py  0002_delete_application.py
job_app/: settings.py  urls.py
job_app/templates/: base.html
recruiter/: admin.py  apps.py  decorators.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
recruiter/migrations/: 0001_initial.py  0002_jobposting_location_jobposting_remote_and_more.py
recruiter/templatetags/: recruiter_utils.py
tests/: test_email.py
utils/: export.py  messaging.py
(+31 files in other folders)
