[project]
name = "cs-2340-team-6-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "django-stubs[compatible-mypy]>=5.2.5",
    "flake8>=7.3.0",
    "isort>=6.0.1",
]
